[package]
name = "lft-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
num_cpus = "1.13"
queues="1.1.0"
lockfree="0.5.1"
npy="0.4.0"
ndarray="0.15"
transpose="0.2.1"
ndarray-rand="0.14.0"
rand="0.8.5"