[package]
name = "lft-rust"
version = "0.1.0"
repository = "https://github.com/elite-sheep/lft-rust"
readme = "./README.md"
keywords = [ "threadpool", "concurrency" ]
categories = [ "multithreading", "high-performance computing" ]
rust-version = "1.57.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.4"
log = "0.4.17"
num_cpus = "1.13"
pretty_env_logger = "0.4.0"
npy="0.4.0"
ndarray="0.15"
transpose="0.2.1"
ndarray-rand="0.14.0"
rand="0.8.5"
