[package]
name = "lft-rust"
version = "0.1.0"
homepage = "https://github.com/elite-sheep/lft-rust"
repository = "https://github.com/elite-sheep/lft-rust"
readme = "README.md"
license = "MIT"
keywords = [ "threadpool", "concurrency" ]
categories = [ "multithreading", "high-performance computing", "threading" ]
rust-version = "1.57.0"
edition = "2021"

exclude = [
  "examples/*",
  ".github/*",
  ".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.4"
log = "0.4.17"
num_cpus = "1.13"
pretty_env_logger = "0.4.0"

[dev-dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
